--- a/TruTime_MainProject_CTS/test-output/emailable-report.html
+++ b/TruTime_MainProject_CTS/test-output/emailable-report.html
@@ -8,17 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Main Project</th></tr>
-<tr><td><a href="#t0">SeleniumTesting</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">41,500</td><td></td><td></td></tr>
+<tr><th colspan="7">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">2,977</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Main Project</th></tr></tbody><tbody id="t0"><tr><th colspan="4">SeleniumTesting &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">TestSuites.trutime</td><td><a href="#m0">closeBrowser</a></td><td rowspan="1">1649910546893</td><td rowspan="1">389</td></tr><tr><th colspan="4">SeleniumTesting &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">TestSuites.trutime</td><td><a href="#m1">testCases</a></td><td rowspan="1">1649910507084</td><td rowspan="1">39803</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">TestSuites.trutime</td><td><a href="#m0">getdate</a></td><td rowspan="1">1653408573158</td><td rowspan="1">336</td></tr></tbody>
 </table>
-<h2>SeleniumTesting</h2><h3 id="m0">TestSuites.trutime#closeBrowser</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at java.base/java.io.FileOutputStream.&lt;init&gt;(FileOutputStream.java:226)
-	at java.base/java.io.FileOutputStream.&lt;init&gt;(FileOutputStream.java:184)
-	at Base.Base.closeBrowser(Base.java:110)
-	at TestSuites.trutime.closeBrowser(trutime.java:35)
-... Removed 24 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">TestSuites.trutime#testCases</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">TestSuites.trutime#getdate</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
