--- a/TruTime_MainProject_CTS/Report/Report.html
+++ b/TruTime_MainProject_CTS/Report/Report.html
@@ -46,7 +46,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>May 25, 2022 10:30:15 AM</span>
+                    <span class='label suite-start-time blue darken-3'>May 25, 2022 06:28:46 PM</span>
 				</a>
 			</li>
 			<li>
@@ -137,7 +137,7 @@
 					<canvas id='child-analysis' width='100' height='80'></canvas>
 				</div>
 				<div class='block text-small'>
-					<span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>14</span> step(s) passed</span>
+					<span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>15</span> step(s) passed</span>
 				</div>
 				<div class='block text-small'>
 					<span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> step(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> others
@@ -158,14 +158,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>Executing Test Cases</span>
-						<span class='test-time'>May 25, 2022 10:30:15 AM</span>
+						<span class='test-time'>May 25, 2022 06:28:46 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>May 25, 2022 10:30:15 AM</span>
-	<span class='label end-time'>May 25, 2022 10:33:10 AM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 2m 55s+399ms</span>
+	<span class='label start-time'>May 25, 2022 06:28:46 PM</span>
+	<span class='label end-time'>May 25, 2022 06:31:23 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 2m 37s+314ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -179,17 +179,22 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>10:30:16 AM</td>
+					<td class='timestamp'>6:28:49 PM</td>
 					<td class='step-details'>Browser is Invoked</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>10:33:10 AM</td>
+					<td class='timestamp'>6:31:23 PM</td>
 					<td class='step-details'>All steps passed successfuly</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>10:33:10 AM</td>
+					<td class='timestamp'>6:31:23 PM</td>
+					<td class='step-details'>All steps passed successfuly</td>
+				</tr>
+				<tr class='log' status='pass'>
+					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
+					<td class='timestamp'>6:31:23 PM</td>
 					<td class='step-details'>Browser is closed successfuly</td>
 				</tr>
 			</tbody>
@@ -202,14 +207,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='2'>
 					<div class='test-heading'>
 						<span class='test-name'>Login into Becognizant.</span>
-						<span class='test-time'>May 25, 2022 10:30:25 AM</span>
+						<span class='test-time'>May 25, 2022 06:28:54 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>May 25, 2022 10:30:25 AM</span>
-	<span class='label end-time'>May 25, 2022 10:31:08 AM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 43s+758ms</span>
+	<span class='label start-time'>May 25, 2022 06:28:54 PM</span>
+	<span class='label end-time'>May 25, 2022 06:29:56 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 1m 2s+408ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -223,12 +228,12 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>10:30:32 AM</td>
+					<td class='timestamp'>6:29:11 PM</td>
 					<td class='step-details'>Email and Password are verified sucessfully</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>10:31:08 AM</td>
+					<td class='timestamp'>6:29:56 PM</td>
 					<td class='step-details'>Be.Cognizant Page is reached sucessfully</td>
 				</tr>
 			</tbody>
@@ -241,14 +246,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='3'>
 					<div class='test-heading'>
 						<span class='test-name'>Obtain the Week from trutime.</span>
-						<span class='test-time'>May 25, 2022 10:31:08 AM</span>
+						<span class='test-time'>May 25, 2022 06:29:56 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>May 25, 2022 10:31:08 AM</span>
-	<span class='label end-time'>May 25, 2022 10:33:10 AM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 2m 1s+683ms</span>
+	<span class='label start-time'>May 25, 2022 06:29:56 PM</span>
+	<span class='label end-time'>May 25, 2022 06:31:22 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 1m 26s+495ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -262,12 +267,12 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>10:31:12 AM</td>
+					<td class='timestamp'>6:30:05 PM</td>
 					<td class='step-details'>TruTime Page is reached sucessfully</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>10:33:10 AM</td>
+					<td class='timestamp'>6:31:22 PM</td>
 					<td class='step-details'>The dates are obtained sucessfully</td>
 				</tr>
 			</tbody>
@@ -280,14 +285,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='4'>
 					<div class='test-heading'>
 						<span class='test-name'>Getting data from calender class</span>
-						<span class='test-time'>May 25, 2022 10:33:10 AM</span>
+						<span class='test-time'>May 25, 2022 06:31:23 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>May 25, 2022 10:33:10 AM</span>
-	<span class='label end-time'>May 25, 2022 10:33:10 AM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+0ms</span>
+	<span class='label start-time'>May 25, 2022 06:31:23 PM</span>
+	<span class='label end-time'>May 25, 2022 06:31:23 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+5ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -301,7 +306,7 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>10:33:10 AM</td>
+					<td class='timestamp'>6:31:23 PM</td>
 					<td class='step-details'>Sucessfully Got data from calender class</td>
 				</tr>
 			</tbody>
@@ -314,14 +319,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='5'>
 					<div class='test-heading'>
 						<span class='test-name'>Comparing data from both excels</span>
-						<span class='test-time'>May 25, 2022 10:33:10 AM</span>
+						<span class='test-time'>May 25, 2022 06:31:23 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>May 25, 2022 10:33:10 AM</span>
-	<span class='label end-time'>May 25, 2022 10:33:10 AM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+79ms</span>
+	<span class='label start-time'>May 25, 2022 06:31:23 PM</span>
+	<span class='label end-time'>May 25, 2022 06:31:23 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+57ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -335,32 +340,32 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>10:33:10 AM</td>
+					<td class='timestamp'>6:31:23 PM</td>
 					<td class='step-details'>| trutimedates =Mon, 23 May | calenderdates= Mon, 23 May| Match correctly</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>10:33:10 AM</td>
+					<td class='timestamp'>6:31:23 PM</td>
 					<td class='step-details'>| trutimedates =Tue, 24 May | calenderdates= Tue, 24 May| Match correctly</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>10:33:10 AM</td>
+					<td class='timestamp'>6:31:23 PM</td>
 					<td class='step-details'>| trutimedates =Wed, 25 May | calenderdates= Wed, 25 May| Match correctly</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>10:33:10 AM</td>
+					<td class='timestamp'>6:31:23 PM</td>
 					<td class='step-details'>| trutimedates =Thu, 26 May | calenderdates= Thu, 26 May| Match correctly</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>10:33:10 AM</td>
+					<td class='timestamp'>6:31:23 PM</td>
 					<td class='step-details'>| trutimedates =Fri, 27 May | calenderdates= Fri, 27 May| Match correctly</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>10:33:10 AM</td>
+					<td class='timestamp'>6:31:23 PM</td>
 					<td class='step-details'>| trutimedates =Sat, 28 May | calenderdates= Sat, 28 May| Match correctly</td>
 				</tr>
 			</tbody>
@@ -409,25 +414,25 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Steps
-					<div class='panel-lead'>14</div>
+					<div class='panel-lead'>15</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>May 25, 2022 10:30:15 AM</div>
+					<div class='panel-lead'>May 25, 2022 06:28:46 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>May 25, 2022 10:33:10 AM</div>
+			 		<div class='panel-lead'>May 25, 2022 06:31:23 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 2m 55s+489ms</div>
+					<div class='panel-lead'>0h 2m 37s+407ms</div>
 				</div>
 			</div>
 		</div>
@@ -448,7 +453,7 @@
 				skipParent: 0,
 				exceptionsParent: 0,
 				
-				passChild: 14,
+				passChild: 15,
 				failChild: 0,
 				fatalChild: 0,
 				errorChild: 0,
